[tool.poetry]
name = "pendulumtest"
version = "0.1.0"
description = ""
authors = ["Andy Grabow <andy@freilandkiwis.de>"]

[tool.poetry.dependencies]
python = "3.7"
django = "^2.1"
pendulum = "^2.0"
ipdb = "^0.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
